[Backport 2.x] [Refactor] Remove json-path from deps and use JsonPointer instead #3262  (#3284)
Backport 14574dd108cefbd634ab5af8e5f13dba00a5681f from #3262